attempt to fix hover address issue on ios safari

--- a/style.css
+++ b/style.css
@@ -87,12 +87,7 @@ header {
     transition: none;
 }
 
-.addresses p.hover {
-    color: rgb(229, 231, 233);
-    background-color: rgb(23, 32, 42);
-}
-
-.addresses p:hover {
+.addresses p.hover, .addresses p:hover {
     color: rgb(229, 231, 233);
     background-color: rgb(23, 32, 42);
 }
